--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,41 @@
 <header class="header">
-	<div class="header__content _container">
-
+	<div class="header__wrapper">
+		<div class="header__content">
+			<div class="header__body">
+				<a href="#" class="header__logo _ibg">
+					<img src="./img/logo.png" alt="Logo">
+				</a>
+				<div class="header__menu menu">
+					<nav class="menu__body">
+						<ul class="menu__list">
+							<li class="menu__item _active">
+								<a href="#" class="menu__link">Home</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Blog</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Features</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Pricing</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Documentation</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<div class="header__social social-header">
+					<a href="#" class="social-header__item _icon-facebook"></a>
+					<a href="#" class="social-header__item _icon-telegram"></a>
+					<a href="#" class="social-header__item _icon-twitter"></a>
+					<a href="#" class="social-header__item _icon-math"></a>
+				</div>
+				<div class="header__get-started">
+					<button type="button" class="header__button">Get Started</button>
+				</div>
+			</div>
+		</div>
 	</div>
 </header>
