header is ready

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -32,9 +32,14 @@
 					<a href="#" class="social-header__item _icon-twitter"></a>
 					<a href="#" class="social-header__item _icon-math"></a>
 				</div>
-				<div class="header__get-started">
-					<button type="button" class="header__button">Get Started</button>
+				<div data-da=".menu__body,479.98" class="header__get-started">
+					<a href="#" class="header__button btn">Get Started</a>
 				</div>
+				<button type="button" class="icon-menu">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
 			</div>
 		</div>
 	</div>
