--- a/#src/index.html
+++ b/#src/index.html
@@ -6,8 +6,7 @@
 	<body>
 		<div class="wrapper">
 			@@include('_header.html',{})
-			<main class="page _icon-download">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae commodi enim eum illo, neque non praesentium sunt. A asperiores, beatae debitis doloribus eius facilis harum laudantium magni molestias non nostrum odio officiis perferendis porro quod sint tempora tempore voluptatem. Cumque dolorem error eum explicabo, facere laudantium molestias quibusdam. Aliquam assumenda consequatur, dicta dignissimos dolorem dolorum earum eius eos eum ex illo itaque magni neque numquam perferendis quasi quidem recusandae repudiandae sequi similique sint soluta veniam veritatis voluptate voluptates! Ab asperiores deleniti distinctio, earum est fuga fugiat fugit harum id illum magnam minima modi molestias nesciunt nulla officiis pariatur perspiciatis praesentium quisquam quos reprehenderit rerum sint suscipit tempore tenetur ullam vitae. Ad, aliquid corporis cupiditate deleniti ea eius eligendi expedita iste nihil officiis, possimus praesentium quos repellat reprehenderit sed sequi sit soluta! Aliquam aut consectetur consequatur corporis delectus deleniti ex, libero natus odio placeat quasi quisquam quod ratione repellat suscipit voluptatibus?
+			<main class="page">
 			</main>
 			@@include('_footer.html',{})
 		</div>
