main-slider.begin

--- a/#src/index.html
+++ b/#src/index.html
@@ -7,6 +7,23 @@
 		<div class="wrapper">
 			@@include('_header.html',{})
 			<main class="page">
+				<section class="page__intro-slider intro-slider">
+					<div class="intro-slider__container _container">
+						<div class="intro-slider__slider slider-intro">
+							<div class="slider-intro__dots"></div>
+							<div class="slider-intro__body _swiper">
+								<div class="slider-intro__slide">
+									<div class="slider-intro__header-text">plan your life</div>
+									<h1 class="slider-intro__title">Increase your productivity</h1>
+									<div class="slider-intro__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+									<a href="#" class="slider-intro__play _icon-play"></a>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
