--- a/#src/index.html
+++ b/#src/index.html
@@ -8,17 +8,41 @@
 			@@include('_header.html',{})
 			<main class="page">
 				<section class="page__intro-slider intro-slider">
-					<div class="intro-slider__container _container">
+					<div class="intro-slider__container">
 						<div class="intro-slider__slider slider-intro">
-							<div class="slider-intro__dots"></div>
 							<div class="slider-intro__body _swiper">
-								<div class="slider-intro__slide">
-									<div class="slider-intro__header-text">plan your life</div>
-									<h1 class="slider-intro__title">Increase your productivity</h1>
-									<div class="slider-intro__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
-									<a href="#" class="slider-intro__play _icon-play"></a>
+								<div class="slider-intro__slide intro-slide">
+									<div class="intro-slide__body">
+										<div class="intro-slide__header-text">plan your life</div>
+										<h1 class="intro-slide__title _title">Increase your <span>productivity<span></h1>
+										<div class="intro-slide__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+										<div class="intro-slide__play">
+											<a href="#" class="intro-slide__link _icon-play"></a>
+										</div>
+									</div>
+								</div>
+								<div class="slider-intro__slide intro-slide">
+									<div class="intro-slide__body">
+										<div class="intro-slide__header-text">plan your life</div>
+										<h1 class="intro-slide__title _title">Increase your <span>productivity<span></h1>
+										<div class="intro-slide__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+										<div class="intro-slide__play">
+											<a href="#" class="intro-slide__link _icon-play"></a>
+										</div>
+									</div>
+								</div>
+								<div class="slider-intro__slide intro-slide">
+									<div class="intro-slide__body">
+										<div class="intro-slide__header-text">plan your life</div>
+										<h1 class="intro-slide__title _title">Increase your <span>productivity<span></h1>
+										<div class="intro-slide__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+										<div class="intro-slide__play">
+											<a href="#" class="intro-slide__link _icon-play"></a>
+										</div>
+									</div>
 								</div>
 							</div>
+							<div class="slider-intro__dots"></div>
 						</div>
 
 					</div>
