Customer's section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -46,7 +46,17 @@
 						</div>
 
 					</div>
-
+				</section>
+				<section class="page__customers customers">
+					<div class="customers__container _container">
+						<div class="customers__body">
+							<a href="#" class="customers__link _icon-bitbucket"></a>
+							<a href="#" class="customers__link _icon-watch"></a>
+							<a href="#" class="customers__link _icon-Facebook"></a>
+							<a href="#" class="customers__link _icon-atlassian"></a>
+							<a href="#" class="customers__link _icon-audi"></a>
+						</div>
+					</div>
 				</section>
 			</main>
 			@@include('_footer.html',{})
