--- a/#src/index.html
+++ b/#src/index.html
@@ -13,9 +13,9 @@
 							<div class="slider-intro__body _swiper">
 								<div class="slider-intro__slide intro-slide">
 									<div class="intro-slide__body">
-										<div class="intro-slide__header-text">plan your life</div>
+										<div class="intro-slide__header-text _header-text">plan your life</div>
 										<h1 class="intro-slide__title _title">Increase your <span>productivity<span></h1>
-										<div class="intro-slide__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+										<div class="intro-slide__text _content-text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
 										<div class="intro-slide__play">
 											<a href="#" class="intro-slide__link _icon-play"></a>
 										</div>
@@ -55,6 +55,32 @@
 							<a href="#" class="customers__link _icon-Facebook"></a>
 							<a href="#" class="customers__link _icon-atlassian"></a>
 							<a href="#" class="customers__link _icon-audi"></a>
+						</div>
+					</div>
+				</section>
+				<section class="page__manage manage">
+					<div class="manage__container">
+						<div class="manage__body">
+							<div class="manage__column manage__column_left">
+								<div class="manage__content text-content">
+									<div class="text-content__header-text _header-text">desktop and mobile app</div>
+									<h2 class="text-content__title _title">
+										<span>Plan</span> and <span>manage</span>
+									</h2>
+									<div class="text-content__text _content-text">
+										Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata. Solum patrioque no sea. Mea ex malis mollis oporteat. Eum an expetenda consequat.
+									</div>
+									<div class="text-content__buttons">
+										<a href="#" class="text-content__button btn _icon-play">View video</a>
+										<a href="#" class="text-content__button btn">See features</a>
+									</div>
+								</div>
+							</div>
+							<div class="manage__column manage__column_right">
+								<div class="manage__image _ibg">
+									<img src="./img/illustration.png" alt="illustration">
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
