manage section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -23,9 +23,9 @@
 								</div>
 								<div class="slider-intro__slide intro-slide">
 									<div class="intro-slide__body">
-										<div class="intro-slide__header-text">plan your life</div>
+										<div class="intro-slide__header-text _header-text">plan your life</div>
 										<h1 class="intro-slide__title _title">Increase your <span>productivity<span></h1>
-										<div class="intro-slide__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+										<div class="intro-slide__text _content-text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
 										<div class="intro-slide__play">
 											<a href="#" class="intro-slide__link _icon-play"></a>
 										</div>
@@ -33,9 +33,9 @@
 								</div>
 								<div class="slider-intro__slide intro-slide">
 									<div class="intro-slide__body">
-										<div class="intro-slide__header-text">plan your life</div>
+										<div class="intro-slide__header-text _header-text">plan your life</div>
 										<h1 class="intro-slide__title _title">Increase your <span>productivity<span></h1>
-										<div class="intro-slide__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+										<div class="intro-slide__text _content-text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
 										<div class="intro-slide__play">
 											<a href="#" class="intro-slide__link _icon-play"></a>
 										</div>
@@ -59,7 +59,7 @@
 					</div>
 				</section>
 				<section class="page__manage manage">
-					<div class="manage__container">
+					<div class="manage__container _container">
 						<div class="manage__body">
 							<div class="manage__column manage__column_left">
 								<div class="manage__content text-content">
