--- a/#src/index.html
+++ b/#src/index.html
@@ -84,6 +84,44 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__features features">
+					<div class="features__container _container">
+						<div class="features__body">
+							<div class="features__header-text _header-text">about us</div>
+							<h2 class="features__title">Read about our app</h2>
+							<div class="features__list list-features">
+								<div class="list-features__item feature">
+									<button class="feature__button _icon-label"></button>
+									<div class="feature__title">Overview</div>
+									<div class="feature__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+								</div>
+								<span class="list-features__separator"></span>
+								<div class="list-features__item feature">
+									<button class="feature__button _icon-label"></button>
+									<div class="feature__title">Overview</div>
+									<div class="feature__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+								</div>
+								<span class="list-features__separator"></span>
+								<div class="list-features__item feature">
+									<button class="feature__button _icon-label"></button>
+									<div class="feature__title">Overview</div>
+									<div class="feature__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+								</div>
+								<span class="list-features__separator"></span>
+								<div class="list-features__item feature">
+									<button class="feature__button _icon-label"></button>
+									<div class="feature__title">Overview</div>
+									<div class="feature__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+								</div>
+							</div>
+							<div class="features__buttons">
+								<a href="#" class="features__button-item features__button-item_red btn">Read more</a>
+								<span class="features__button-separator">or</span>
+								<a href="#" class="features__button-item features__button-item_blue btn">Get started</a>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
