Stats section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -122,6 +122,30 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__stats stats">
+					<div class="stats__container">
+						<div class="stats__body">
+							<div class="stats__column stats__column_left">
+								<div class="stats__item item-stats item-stats_left">
+									<div class="item-stats__image">
+										<img src="./img/left-stat.png" alt="left-stat">
+									</div>
+									<div class="item-stats__numbers">89%</div>
+									<div class="item-stats__text">Customers who have increased their productivity</div>
+								</div>
+							</div>
+							<div class="stats__column stats__column_right">
+								<div class="stats__item item-stats item-stats item-stats_right">
+									<div class="item-stats__image">
+										<img src="./img/right-stat.png" alt="right-stat">
+									</div>
+									<div class="item-stats__numbers">3123</div>
+									<div class="item-stats__text">Users who have used our application</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
