--- a/#src/index.html
+++ b/#src/index.html
@@ -147,42 +147,42 @@
 					</div>
 				</section>
 				<section class="page__blog blog">
-					<div class="blog__container _container">
+					<div class="blog__container">
 						<div class="blog__body">
 							<div class="blog__header-text _header-text">our resources</div>
 							<h2 class="blog__title _title-blue">Start reading our blog</h2>
 							<div class="blog__slider slider-blog">
-								<div class="slider-blog__container">
-									<div class="slider-blog__body _swiper">
-										<div class="slider-blog__slide">
-											<div class="slider-blog__photos photo-slider">
-												<div class="photo-slider__item photo-slider__item_big _ibg">
-													<img src="./img/blog/blog1.png" alt="">
-												</div>
-												<div class="photo-slider__item _ibg">
-													<img src="./img/blog/blog1.png" alt="">
-												</div>
-												<div class="photo-slider__item _ibg">
-													<img src="./img/blog/blog1.png" alt="">
-												</div>
+								<div class="slider-blog__body">
+									<div class="slider-blog__column slider-blog__column_images photo-slider">
+										<div class="photo-slider__column photo-slider__column_big">
+											<div class="photo-slider__image _ibg">
+												<img src="./img/blog/big-picture.webp" alt="">
+												<a href="#" class="search-label _icon-search"></a>
 											</div>
-											<div class="slider-blog__content">
-												<div class="slider-blog__title">How to start planning</div>
-												<div class="slider-blog__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...</div>
-												<div class="slider-blog__buttons">
-													<a href="#" class="slider-blog__read btn">Read now</a>
-													<a href="#" class="slider-blog__link">Add to your bookmarks</a>
-												</div>
+										</div>
+										<div class="photo-slider__column photo-slider__column_small">
+											<div class="photo-slider__image _ibg">
+												<img src="./img/blog/mini-picture-1.webp" alt="">
+												<a href="#" class="search-label _icon-search"></a>
+											</div>
+											<div class="photo-slider__image _ibg">
+												<img src="./img/blog/mini-picture-2.webp" alt="">
+												<a href="#" class="search-label _icon-search"></a>
+											</div>
+										</div>
+									</div>
+									<div class="slider-blog__column slider-blog__column_text">
+										<div class="slider-blog__content">
+											<div class="slider-blog__title">How to start planning</div>
+											<div class="slider-blog__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...</div>
+											<div class="slider-blog__buttons">
+												<a href="#" class="slider-blog__read-button btn">Read now</a>
+												<a href="#" class="slider-blog__link">Add to your bookmarks</a>
+												<a href="#" class="search-label _icon-search"></a>
 											</div>
 										</div>
 									</div>
 								</div>
-
-								<div class="slider-blog__arrows slider-arrow">
-									<button class="slider-arrow slider-arrow_prev _icon-arrow"></button>
-									<button class="slider-arrow slider-arrow_next _icon-arrow"></button>
-								</div>
-								<div class="slider-blog__dots"></div>
 							</div>
 						</div>
 					</div>
