Features section. Add content

--- a/#src/index.html
+++ b/#src/index.html
@@ -97,21 +97,21 @@
 								</div>
 								<span class="list-features__separator"></span>
 								<div class="list-features__item feature">
-									<button class="feature__button _icon-label"></button>
-									<div class="feature__title">Overview</div>
-									<div class="feature__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+									<button class="feature__button _icon-folder"></button>
+									<div class="feature__title">Files</div>
+									<div class="feature__text">No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.</div>
 								</div>
 								<span class="list-features__separator"></span>
 								<div class="list-features__item feature">
-									<button class="feature__button _icon-label"></button>
-									<div class="feature__title">Overview</div>
-									<div class="feature__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+									<button class="feature__button _icon-message"></button>
+									<div class="feature__title">Meeting chats</div>
+									<div class="feature__text">Vim ne tacimates neglegentur. Erat diceret omittam at est.</div>
 								</div>
 								<span class="list-features__separator"></span>
 								<div class="list-features__item feature">
-									<button class="feature__button _icon-label"></button>
-									<div class="feature__title">Overview</div>
-									<div class="feature__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+									<button class="feature__button _icon-download"></button>
+									<div class="feature__title">Save events</div>
+									<div class="feature__text">Nisl idque mel ea, nominati voluptatum.</div>
 								</div>
 							</div>
 							<div class="features__buttons">
