Quote's section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -257,6 +257,62 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__quotes quotes">
+					<div class="quotes__container _container">
+						<div class="quotes__content">
+							<div class="quotes__header-text _header-text">testimonials</div>
+							<h2 class="quotes__title _title-blue">Customers's quotes</h2>
+							<div class="quotes__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an.</div>
+						</div>
+						<div class="quotes__slider slider-quotes">
+							<div class="slider-quotes__body _swiper">
+								<div class="slider-quotes__slide">
+									<div class="slider-quotes__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+									<div class="slider-quotes__photo _ibg">
+										<img src="img/quotes/client1.png" alt="client1">
+									</div>
+								</div>
+								<div class="slider-quotes__slide">
+									<div class="slider-quotes__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+									<div class="slider-quotes__photo _ibg">
+										<img src="img/quotes/client3.png" alt="client3">
+									</div>
+								</div>
+								<div class="slider-quotes__slide">
+									<div class="slider-quotes__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+									<div class="slider-quotes__photo _ibg">
+										<img src="img/quotes/client1.png" alt="client1">
+									</div>
+								</div>
+								<div class="slider-quotes__slide">
+									<div class="slider-quotes__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+									<div class="slider-quotes__photo _ibg">
+										<img src="img/quotes/client2.png" alt="client2">
+									</div>
+								</div>
+								<div class="slider-quotes__slide">
+									<div class="slider-quotes__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+									<div class="slider-quotes__photo _ibg">
+										<img src="img/quotes/client3.png" alt="client3">
+									</div>
+								</div>
+								<div class="slider-quotes__slide">
+									<div class="slider-quotes__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+									<div class="slider-quotes__photo _ibg">
+										<img src="img/quotes/client1.png" alt="client1">
+									</div>
+								</div>
+								<div class="slider-quotes__slide">
+									<div class="slider-quotes__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+									<div class="slider-quotes__photo _ibg">
+										<img src="img/quotes/client1.png" alt="client1">
+									</div>
+								</div>
+							</div>
+							<div class="slider-quotes__dots"></div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
