Faq's section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -313,6 +313,57 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__faq faq">
+					<div class="faq__container _container">
+						<div class="faq__body">
+							<div class="faq__header-text _header-text">customer help</div>
+							<h2 class="faq__title _title-blue">Frequently asked questions</h2>
+							<div class="faq__spoiler spoiler-faq">
+								<div class="spoiler-faq__block">
+									<button type="button" class="spoiler-faq__title _icon-arrow_expand">Reque insolens in vel?</button>
+									<div hidden="" class="spoiler-faq__wrapper">
+										<div  class="spoiler-faq__content">
+											<div class="spoiler-faq__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+										</div>
+									</div>
+								</div>
+								<div class="spoiler-faq__block">
+									<button type="button" class="spoiler-faq__title _icon-arrow_expand">Vis rebum error graecis ea, id sit postea accusamus?</button>
+									<div hidden="" class="spoiler-faq__wrapper">
+										<div  class="spoiler-faq__content">
+											<div class="spoiler-faq__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+										</div>
+									</div>
+								</div>
+								<div class="spoiler-faq__block">
+									<button type="button" class="spoiler-faq__title _icon-arrow_expand">Lorem repudiandae ne nec?</button>
+									<div hidden="" class="spoiler-faq__wrapper">
+										<div  class="spoiler-faq__content">
+											<div class="spoiler-faq__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+											<a href="#" class="spoiler-faq__button btn">Go to documentation</a>
+										</div>
+									</div>
+								</div>
+								<div class="spoiler-faq__block">
+									<button type="button" class="spoiler-faq__title _icon-arrow_expand">Ad dicit numquam vel. Et eos iudico feugait percipitur?</button>
+									<div hidden="" class="spoiler-faq__wrapper">
+										<div  class="spoiler-faq__content">
+											<div class="spoiler-faq__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+										</div>
+									</div>
+								</div>
+								<div class="spoiler-faq__block">
+									<button type="button" class="spoiler-faq__title _icon-arrow_expand">Sea no dico percipitur. Fierent constituam definitiones id eum?</button>
+									<div hidden="" class="spoiler-faq__wrapper">
+										<div  class="spoiler-faq__content">
+											<div class="spoiler-faq__text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
