Get Started section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -364,6 +364,21 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__get-started get-started">
+					<div class="get-started__container _container">
+						<div class="get-started__body">
+							<div class="get-started__header-text _header-text">play your life</div>
+							<h2 class="get-started__title _title">
+								Get <span>started</span> now
+							</h2>
+							<div class="get-started__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+							<div class="get-started__buttons">
+								<a href="#" class="get-started__button btn">View pricing</a>
+								<a href="#" class="get-started__button btn">Read documentation</a>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
