Newletter's section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -379,6 +379,22 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__newsletter newsletter">
+					<div class="newsletter__container _container">
+						<div class="newsletter__body">
+							<div class="newsletter__content">
+								<h3 class="newsletter__title">Sign up for newsletter</h3>
+								<div class="newsletter__text">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu, homero alterum.</div>
+							</div>
+							<div class="newsletter__form form-newsletter">
+								<form action="" class="form-newsletter__item">
+									<input type="email" autocomplete="off" placeholder="Email address" class="form-newsletter__input">
+									<button class="form-newsletter__button btn">Save me</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
