Footer section finished

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,44 @@
 <footer class="footer">
 	<div class="footer__content _container">
-
+		<div class="header__body">
+			<a href="#" class="header__logo _ibg">
+				<img src="./img/logo.png" alt="Logo">
+			</a>
+			<div class="header__menu menu">
+				<nav class="menu__body">
+					<ul class="menu__list">
+						<li data-nav="1" class="menu__item _active">
+							<a href="#" class="menu__link">Home</a>
+						</li>
+						<li data-nav="2" class="menu__item">
+							<a href="#" class="menu__link">Blog</a>
+						</li>
+						<li data-nav="3" class="menu__item">
+							<a href="#" class="menu__link">Features</a>
+						</li>
+						<li data-nav="4" class="menu__item">
+							<a href="#" class="menu__link">Pricing</a>
+						</li>
+						<li data-nav="5" class="menu__item">
+							<a href="#" class="menu__link">Documentation</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="header__social social-header">
+				<a href="#" class="social-header__item _icon-facebook"></a>
+				<a href="#" class="social-header__item _icon-telegram"></a>
+				<a href="#" class="social-header__item _icon-twitter"></a>
+				<a href="#" class="social-header__item _icon-math"></a>
+			</div>
+			<div data-da="footer .menu__body,479.98" class="header__get-started">
+				<a href="#" class="header__button btn">Get Started</a>
+			</div>
+			<button type="button" class="icon-menu">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
+		</div>
 	</div>
 </footer>
