--- a/#src/_header.html
+++ b/#src/_header.html
@@ -8,19 +8,19 @@
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item _active">
+							<li data-nav="1" class="menu__item _active">
 								<a href="#" class="menu__link">Home</a>
 							</li>
-							<li class="menu__item">
+							<li data-nav="2" class="menu__item">
 								<a href="#" class="menu__link">Blog</a>
 							</li>
-							<li class="menu__item">
+							<li data-nav="3" class="menu__item">
 								<a href="#" class="menu__link">Features</a>
 							</li>
-							<li class="menu__item">
+							<li data-nav="4" class="menu__item">
 								<a href="#" class="menu__link">Pricing</a>
 							</li>
-							<li class="menu__item">
+							<li data-nav="5" class="menu__item">
 								<a href="#" class="menu__link">Documentation</a>
 							</li>
 						</ul>
@@ -32,7 +32,7 @@
 					<a href="#" class="social-header__item _icon-twitter"></a>
 					<a href="#" class="social-header__item _icon-math"></a>
 				</div>
-				<div data-da=".menu__body,479.98" class="header__get-started">
+				<div data-da="header .menu__body,479.98" class="header__get-started">
 					<a href="#" class="header__button btn">Get Started</a>
 				</div>
 				<button type="button" class="icon-menu">
